<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoRPG</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">Register</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="group_name">ToDoRPG Iteration 4</string>
    <string name="create_character">Create Character</string>
    <string name="current_info">My Character Information</string>
    <string name="quest_creation">Create Quest</string>
    <string name="quit">Quit</string>
    <string name="user_name">ID</string>
    <string name="login_password">Password</string>
    <string name="user_name_hint">Write your ID</string>
    <string name="password_hint">write password</string>
    <string name="register_ID">ID</string>
    <string name="register_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_character_selection">Select Character</string>
    <string name="str">STR</string>
    <string name="con">CON</string>
    <string name="dex">DEX</string>
    <string name="int_">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="title_character_creation">CharacterCreation</string>
    <string name="warning_message">ID already exists</string>
    <string name="cancel">Cancel</string>
    <string name="name_message">ID Field is empty</string>
    <string name="pw_message">Password Field is empty</string>
    <string name="cpw_message">Confirm Password Field is empty</string>
    <string name="pw_not_match_message">Passwords do not match</string>
    <string name="no_id_exist">No such ID exists</string>
    <string name="wrong_pw">ID and Password do not match</string>
    <string name="quest_title">Quest Title</string>
    <string name="quest_location">Quest Location</string>
    <string name="quest_location_btn">Add Location</string>
    <string name="quest_description_text">Description</string>
    <string name="quest_milestone_text">Milestones</string>
    <string name="quest_milestone_btn">Add Milestone</string>
    <string name="quest_duration">Duration(Hours)</string>
    <string name="quest_submit">Submit</string>
    <string name="level">LEVEL</string>
    <string name="character_name">Character Name</string>
    <string name="charter_spinner_prompt">Choose Your Character</string>
    <string name="my_name">NAME</string>
    <string name="my_quest_info">Quest List</string>
    <string name="single_user_quest_info">View My Quest</string>
    <string name="location_spinner_prompt">Do you need Location?</string>
    <string name="confirm">Create</string>
    <string name="all_quest">View All Quests</string>
    <string name="creator_id_field">Leader</string>
    <string name="join">Find Quest to join</string>
    <string name="empty_place">Empty place</string>
    <string name="maximum_spinner_prompt">please choose maximum capacity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_alarm_notification">AlarmNotification</string>
    <string name="choose_option">Please choose one of following options</string>
    <string name="progress">In Progress</string>
    <string name="done">Done</string>
    <string name="okay">Change status</string>
    <string name="cancel_btn">Cancel</string>
    <string name="title_activity_calendar_view">CalendarView</string>

</resources>