<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/register_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_ID"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/register_warning_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/warning_message"
        android:visibility="gone" />

    <TextView
        android:id="@+id/register_name_empty_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/name_message"
        android:visibility="gone" />

    <TextView
        android:id="@+id/register_password_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="16" />

    <TextView
        android:id="@+id/register_pw_empty_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/pw_message"
        android:visibility="gone" />

    <TextView
        android:id="@+id/confirm_password_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="16" />

    <TextView
        android:id="@+id/register_cpw_empty_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/cpw_message"
        android:visibility="gone" />
    <TextView
        android:id="@+id/pw_not_match_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/pw_not_match_message"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/register_btn"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/register" />

        <Button
            android:id="@+id/register_cancel_btn"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>