<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="12" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/group_name"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            android:text="@string/group_name"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/register"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/log_in"
            android:textSize="12sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sub_header"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="10" >

        <TextView
            android:id="@+id/user_id"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="8"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/log_out"
            android:textSize="12sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/create_character_btn"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/create_character" />

        <Button
            android:id="@+id/character_info_btn"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/current_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/quest_creation_btn"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/quest_creation" />

        <Button
            android:id="@+id/my_quest_info_btn"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/single_user_quest_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/all_quest_btn"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/all_quest" />

        <Button
            android:id="@+id/join_quest_btn"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/join" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/something_new"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/empty_place" />

        <Button
            android:id="@+id/quit_btn"
            android:layout_width="0sp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/my_button"
            android:minHeight="0dp"
            android:text="@string/quit" />
    </LinearLayout>

</LinearLayout>