<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/login_username_text"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/user_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text" 
            android:hint="@string/user_name_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/login_password_text"
            android:layout_weight="3"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_password"
            android:layout_weight="7"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16"
            android:hint="@string/password_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/loginRegisterErrorTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold" />

</LinearLayout>