<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp">
    

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/my_name" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/name_field"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/level_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_field"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/level" />

    <TextView
        android:id="@+id/character_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_field"
        android:layout_toRightOf="@id/level_field"
        android:textSize="14sp"
        android:layout_alignLeft="@id/character_name"
        android:textStyle="bold" />
    
     <TextView
        android:id="@+id/str_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_level"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/str" />

    <TextView
        android:id="@+id/character_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_level"
        android:layout_toRightOf="@id/str_field"
        android:textSize="14sp"
        android:layout_alignLeft="@id/character_name"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/con_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_str"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/con" />

    <TextView
        android:id="@+id/character_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_str"
        android:layout_toRightOf="@id/con_field"
        android:textSize="14sp"
        android:layout_alignLeft="@id/character_name"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/dex_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_con"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/dex" />

    <TextView
        android:id="@+id/character_dex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_con"
        android:layout_toRightOf="@id/dex_field"
        android:textSize="14sp"
        android:layout_alignLeft="@id/character_name"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/int_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_dex"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/int_" />

    <TextView
        android:id="@+id/character_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_dex"
        android:layout_toRightOf="@id/int_field"
        android:textSize="14sp"
        android:layout_alignLeft="@id/character_name"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/wis_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_int"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/wis" />

    <TextView
        android:id="@+id/character_wis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/character_name"
        android:layout_below="@id/character_int"
        android:layout_toRightOf="@id/wis_field"
        android:textSize="14sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/cha_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_wis"
        android:layout_toRightOf="@id/character_image"
        android:text="@string/cha" />

    <TextView
        android:id="@+id/character_cha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_wis"
        android:layout_toRightOf="@id/cha_field"
        android:textSize="14sp"
        android:layout_alignLeft="@id/character_name"
        android:textStyle="bold" />
    
    

</RelativeLayout>