<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark">
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	    tools:context=".MainActivity" >
		
		<ImageView 
		    android:id="@+id/character_image"
		    android:layout_width="fill_parent"
		    android:layout_height="150dp"
		    android:scaleType="fitXY"
	        android:layout_marginTop="10dp" 
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"/>
		<LinearLayout
		    android:id="@+id/stat_1_3"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:weightSum="6"
		    android:layout_margin="10dp"
		    
		    android:orientation="horizontal">
		    <TextView
		        android:id="@+id/str_stat_text"
		    	android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/str"
		    	android:textColor="@android:color/white"/>
		    <TextView 
		        android:id="@+id/str_stat"
		        android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:textColor="@android:color/white"/>
		    
		     <TextView
		        android:id="@+id/con_stat_text"
		    	android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/con"
		    	android:textColor="@android:color/white"/>
		    <TextView 
		        android:id="@+id/con_stat"
		        android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:textColor="@android:color/white"/>
		    
		     <TextView
		        android:id="@+id/dex_stat_text"
		    	android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/dex"
		    	android:textColor="@android:color/white"/>
		    <TextView 
		        android:id="@+id/dex_stat"
		        android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:textColor="@android:color/white"/>
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/stat_4_6"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:weightSum="6"
		    android:layout_margin="10dp"
		    
		    android:orientation="horizontal">
		    <TextView
		        android:id="@+id/int_stat_text"
		    	android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/int_"
		    	android:textColor="@android:color/white"/>
		    <TextView 
		        android:id="@+id/int_stat"
		        android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:textColor="@android:color/white"/>
		    
		     <TextView
		        android:id="@+id/wis_stat_text"
		    	android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/wis"
		    	android:textColor="@android:color/white"/>
		    <TextView 
		        android:id="@+id/wis_stat"
		        android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:textColor="@android:color/white"/>
		    
		     <TextView
		        android:id="@+id/cha_stat_text"
		    	android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:text="@string/cha"
		    	android:textColor="@android:color/white"/>
		    <TextView 
		        android:id="@+id/cha_stat"
		        android:layout_weight="1"
		    	android:layout_width="0sp"
		    	android:layout_height="wrap_content"
		    	android:textColor="@android:color/white"/>
		</LinearLayout>
		
		<LinearLayout
	        android:id="@+id/character_skill_1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="10dp"
	        android:weightSum="10">
			<ImageView 
			    android:background="@drawable/merchant"
			    android:id="@+id/skill_1_image"
			    android:layout_weight="3"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
			<TextView
			    android:id="@+id/skill_1_explanation"
			    android:textColor="@android:color/white"
			    android:layout_marginLeft="5dp"
			    android:layout_weight="7"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
   		</LinearLayout>
   		
		<LinearLayout
	        android:id="@+id/character_skill_2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="10dp"
	        
	        android:weightSum="10">
			<ImageView 
			    android:background="@drawable/storm_trooper"
			    android:id="@+id/skill_2_image"
			    android:layout_weight="3"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
			<TextView
			    android:id="@+id/skill_2_explanation"
			    android:textColor="@android:color/white"
			    android:layout_marginLeft="5dp"
			    android:layout_weight="7"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
   		</LinearLayout>
   		
   		<LinearLayout
	        android:id="@+id/character_skill_3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="10dp"
	        
	        android:weightSum="10">
			<ImageView 
			    android:background="@drawable/engineer"
			    android:id="@+id/skill_3_image"
			    android:layout_weight="3"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
			<TextView
			    android:id="@+id/skill_3_explanation"
			    android:textColor="@android:color/white"
			    android:layout_marginLeft="5dp"
			    android:layout_weight="7"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
   		</LinearLayout>
   		
   		<LinearLayout
	        android:id="@+id/character_skill_4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="10dp"
	        android:weightSum="10">
			<ImageView 
			    android:background="@drawable/basketball_player"
			    android:id="@+id/skill_4_image"
			    android:layout_weight="3"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
			<TextView
			    android:id="@+id/skill_4_explanation"
			    android:textColor="@android:color/white"
			    android:layout_marginLeft="5dp"
			    android:layout_weight="7"
			    android:layout_width="0sp"
			    android:layout_height="50sp"/>
   		</LinearLayout>
   		
	</LinearLayout>
</ScrollView>


